--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         </div>
 
                         <div class="journalist">
-                            <div class="image"></div>
+                            <div class="image"><img src="images/journalist/Siridis.jpg" alt="Συρίδης"></div>
                             <h6 class="journalistName">Γιώργος Συρίδης</h6>
                             <p>Ξεκίνησε από τα "Σπορ του Βορρά" τον Δεκέμβριο
 
@@ -210,7 +210,7 @@
                                 Equipe"</p>
                         </div>
                         <div class="journalist">
-                            <div class="image"></div>
+                            <div class="image"><img src="images/journalist/tsarouhas.jpg" alt="Τσαρούχας"></div>
                             <h6 class="journalistName">Αλέξης Τσαρούχας</h6>
                             <p>Στη δημοσιογραφία από το μακρινό (πια) 1993.
 
@@ -229,7 +229,7 @@
                                 team του <a href="https://www.makthes.gr/" target="_blank">makthes.gr</a>.</p>
                         </div>
                         <div class="journalist">
-                            <div class="image"></div>
+                            <div class="image"><img src="images/journalist/doupkaris.jpg" alt="Δούπκαρης"></div>
                             <h6 class="journalistName">Στάθης Δούπκαρης</h6>
                             <p>Είναι αναλυτής ποδοσφαίρου, όντας απόφοιτος
 
