--- a/index.html
+++ b/index.html
@@ -598,6 +598,7 @@
 
         slider.addEventListener('touchmove', e => {
             if (e.touches[0].clientY < journalistCont.getBoundingClientRect().top + 230) return
+            if (e.clientY > journalistCont.getBoundingClientRect().bottom - 50) return
             if (!pressed) return
             e.preventDefault()
             x = e.targetTouches[0].pageX
