--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aris Insider</title>
+    <title>Aris Inside</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="preloader">
+        <div>
+            <div></div>
+            <img src="images/logo.png" alt="Logo">
+        </div>
+    </div>
     <main>
         <header class="header2">
             <div class="logo">
@@ -21,7 +27,10 @@
                 <div class="desktop-menu-fixed3">Συντελεστές</div>
                 <div class="desktop-menu-fixed4">Επικοινωνία</div>
                 <div class="issuu">
-                    → Αγορά μέσω<img src="images/issuu.png" alt="issuu">
+                    <a target="_blank"
+                        href="https://issuu.com/kvelitsikakis/docs/aris_inside_magazine_-_issue_no.1_-_february_2021">
+                        → Αγορά μέσω<img src="images/issuu.png" alt="issuu">
+                    </a>
                 </div>
             </nav>
             <div class="mobileMenu burgerMenu">
@@ -57,7 +66,10 @@
                         <div class="desktop-static-menu3">Συντελεστές</div>
                         <div class="desktop-static-menu4">Επικοινωνία</div>
                         <div class="issuu">
-                            → Αγορά μέσω<img src="images/issuu.png" alt="issuu">
+                            <a target="_blank"
+                                href="https://issuu.com/kvelitsikakis/docs/aris_inside_magazine_-_issue_no.1_-_february_2021">
+                                → Αγορά μέσω<img src="images/issuu.png" alt="issuu">
+                            </a>
                         </div>
                     </div>
                     <div class="desktopMenu burgerMenu">
@@ -67,10 +79,11 @@
             </header>
             <h1><span>Ζήσε κάθε ιστορία του Άρη</span>
                 <br>
-                από μέσα.
+                ΑΠΟ ΜΕΣΑ.
             </h1>
             <div class="hero">
                 <img src="images/hero1.jpg" alt="Hero">
+                <img style="opacity:0" src="images/hero2.jpg" alt="Hero">
             </div>
             <div class="tefhos">
                 <img src="images/tefhosFevrouariou.png" alt="Τεύχος Φευρουαρίου">
@@ -79,7 +92,10 @@
                 <img src="images/arrow-section.png" alt="arrow">
             </div>
             <div class="issuuMobile">
-                → Αγορά μέσω<img src="images/issuuMobile.png" alt="issuu">
+                <a target="_blank"
+                    href="https://issuu.com/kvelitsikakis/docs/aris_inside_magazine_-_issue_no.1_-_february_2021">
+                    → Αγορά μέσω<img src="images/issuuMobile.png" alt="issuu">
+                </a>
             </div>
         </section>
 
@@ -135,9 +151,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="arrowSection">
-                    <img src="images/arrow-section-black.png" alt="arrow">
-                </div> -->
             </section>
 
             <section class="section3" id="section3">
@@ -244,9 +257,6 @@
                                 τομέα της τακτικής και της ανάλυσης αντιπάλων.</p>
                         </div>
                     </div>
-                    <!-- <div class="arrowSection">
-                        <img src="images/arrow-section-black.png" alt="arrow">
-                    </div> -->
                 </div>
             </section>
         </section>
@@ -283,12 +293,12 @@
                         </div>
 
                     </div>
-                    <div class="messanger">
+                    <a href="https://m.me/arisinside" target="_blank" class="messanger">
                         <img src="images/messanger.png" alt="Messanger">
                         <div>
                             m.me/arisinside
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="right">
@@ -300,9 +310,27 @@
                         <span class="followUs">Ακολουθήστε&nbsp;μας</span>
                     </div>
                     <div>
-                        <span class="facebook"><img src="images/facebook.png" alt="facebook">@Arisinside</span>
-                        <span class="twitter"><img src="images/twitter.png" alt="twitter">@Arisinside1</span>
-                        <span class="instagram"><img src="images/instagram.png" alt="instagram">@Arisinside</span>
+
+                        <span class="facebook">
+                            <a target="_blank" href="https://www.facebook.com/Arisinside"><img src="images/facebook.png"
+                                    alt="facebook"></a><a target="_blank"
+                                href="https://www.facebook.com/Arisinside">@Arisinside</a>
+                        </span>
+
+
+                        <span class="twitter">
+                            <a target="_blank" href="https://twitter.com/Arisinside1"><img src="images/twitter.png"
+                                    alt="twitter"></a><a target="_blank"
+                                href="https://twitter.com/Arisinside1">@Arisinside1</a>
+                        </span>
+
+
+                        <span class="instagram">
+                            <a target="_blank" href="https://www.instagram.com/arisinside/"><img
+                                    src="images/instagram.png" alt="instagram"></a><a target="_blank"
+                                href="https://www.instagram.com/arisinside/">@Arisinside</a>
+                        </span>
+
                     </div>
                 </div>
             </div>
@@ -313,315 +341,7 @@
         </footer>
     </main>
 
-    <script>
-
-        //Journalist Name Break in 2 Lines
-        const journalistName = document.querySelectorAll('.journalistName')
-        const elm = document.createElement('br')
-        journalistName.forEach(journalist => {
-            const name = journalist.textContent.split(" ", 2)
-            const firstname = document.createElement('div')
-            const lastname = document.createElement('div')
-            firstname.textContent = name[0]
-            lastname.textContent = name[1]
-            lastname.classList.add('phrase')
-
-            const underlineCont = document.createElement('div')
-            underlineCont.classList.add('underlineCont')
-
-            const underline = document.createElement('div')
-            underline.classList.add('underline')
-
-
-            underlineCont.appendChild(underline)
-            underlineCont.appendChild(lastname)
-
-
-            journalist.textContent = ''
-            journalist.appendChild(firstname)
-            journalist.appendChild(underlineCont)
-        })
-
-        //Menu Scroll Desktop 1
-        const section1 = document.querySelector('.section1')
-        const header2 = document.querySelector('.header2')
-
-
-        window.addEventListener('scroll', () => {
-
-            if (section1.clientHeight - section1.clientHeight * .2 < window.scrollY) {
-                header2.style.top = '0'
-            } else {
-                header2.style.top = '-120px'
-            }
-
-        })
-
-
-        function smoothScroll(target, duration) {
-
-            var target = document.querySelector(target)
-            var targetPosition = target.getBoundingClientRect().top
-            var startPosition = window.pageYOffset
-            var distance = targetPosition - startPosition
-            var startTime = null
-
-            function animation(currentTime) {
-                if (startTime === null) startTime = currentTime
-                var timeElapsed = currentTime - startTime
-                var run = ease(timeElapsed, startPosition, distance, duration)
-                window.scrollTo(0, run)
-                if (timeElapsed < duration) requestAnimationFrame(animation)
-            }
-
-            function ease(t, b, c, d) {
-                t /= d
-                t--
-                return -c * (t * t * t * t - 1) + b
-            }
-
-            requestAnimationFrame(animation)
-        }
-
-        //Menu Scroll Desktop 2
-        const desktopStaticMenu1 = document.querySelector('.desktop-static-menu1'),
-            desktopStaticMenu2 = document.querySelector('.desktop-static-menu2'),
-            desktopStaticMenu3 = document.querySelector('.desktop-static-menu3'),
-            desktopStaticMenu4 = document.querySelector('.desktop-static-menu4')
-
-        desktopStaticMenu1.addEventListener('click', () => {
-            smoothScroll('#section1', 1500)
-        })
-
-        desktopStaticMenu2.addEventListener('click', () => {
-            smoothScroll('#section2', 1500)
-        })
-
-        desktopStaticMenu3.addEventListener('click', () => {
-            smoothScroll('#section3', 1500)
-        })
-
-        desktopStaticMenu4.addEventListener('click', () => {
-            smoothScroll('#footer', 1500)
-        })
-
-        const desktopfixedMenu1 = document.querySelectorAll('.desktop-menu-fixed1'),
-            desktopfixedMenu2 = document.querySelectorAll('.desktop-menu-fixed2'),
-            desktopfixedMenu3 = document.querySelectorAll('.desktop-menu-fixed3'),
-            desktopfixedMenu4 = document.querySelectorAll('.desktop-menu-fixed4')
-
-
-        desktopfixedMenu1.forEach(elm => {
-            elm.addEventListener('click', () => {
-                smoothScroll2('#section1', 1500)
-            })
-        })
-
-        desktopfixedMenu2.forEach(elm => {
-            elm.addEventListener('click', () => {
-                smoothScroll2('#section2', 1500)
-            })
-        })
-
-        desktopfixedMenu3.forEach(elm => {
-            elm.addEventListener('click', () => {
-                smoothScroll2('#section3', 1500)
-            })
-        })
-
-        desktopfixedMenu4.forEach(elm => {
-            elm.addEventListener('click', () => {
-                smoothScroll2('#footer', 1500)
-            })
-        })
-
-        function smoothScroll2(target, duration) {
-
-            var target = document.querySelector(target)
-            var targetPosition = target.getBoundingClientRect().top
-
-            var startPosition = window.pageYOffset
-            var distance = targetPosition - 0
-            var startTime = null
-
-            function animation(currentTime) {
-                if (startTime === null) startTime = currentTime
-                var timeElapsed = currentTime - startTime
-                var run = ease(timeElapsed, startPosition, distance, duration)
-                window.scrollTo(0, run)
-                if (timeElapsed < duration) requestAnimationFrame(animation)
-            }
-
-            function ease(t, b, c, d) {
-                t /= d
-                t--
-                return -c * (t * t * t * t - 1) + b
-            }
-
-            requestAnimationFrame(animation)
-            if (open) closeMobileMenu()
-        }
-
-
-        // Open Issuu
-        const close = document.querySelector('.close')
-        const previewPeriodiko = document.querySelector('.previewPeriodiko')
-        const tefhos = document.querySelector('.tefhos')
-
-        tefhos.addEventListener('click', () => {
-            previewPeriodiko.style.display = 'block'
-            setTimeout(() => {
-                previewPeriodiko.style.opacity = 1;
-            }, 100)
-        })
-
-        close.addEventListener('click', () => {
-            previewPeriodiko.style.opacity = 0;
-            setTimeout(() => {
-                previewPeriodiko.style.display = 'none'
-            }, 400)
-        })
-
-        //Open/Close mobile menu
-        const mobileburgerMenu = document.querySelectorAll('.burgerMenu')
-        const mobileMenu = document.querySelector('.mobileMenuCont')
-        let open = false
-
-        mobileburgerMenu.forEach(menu => {
-            menu.addEventListener('click', () => {
-                if (!open) {
-                    document.body.style.overflow = 'hidden'
-                    mobileMenu.style.top = window.scrollY + 'px'
-                    mobileMenu.style.display = 'grid'
-                    setTimeout(() => {
-                        mobileMenu.style.opacity = '1'
-                    }, 100)
-                    open = true
-                } else {
-                    closeMobileMenu()
-                }
-            })
-        })
-
-        function closeMobileMenu() {
-            document.body.style.overflow = 'auto'
-            mobileMenu.style.opacity = '0'
-            setTimeout(() => {
-                mobileMenu.style.display = 'none'
-            }, 400)
-            open = false
-        }
-
-        window.addEventListener('resize', () => {
-            if (open) {
-                closeMobileMenu()
-            }
-        })
-
-
-
-
-
-
-
-
-
-
-        // Slider Journalist
-        const slider = section3
-        const journalists = slider.querySelector('.journalists')
-        const journalistCont = journalists.querySelector('.journalistsCont')
-
-
-        let pressed = false,
-            startX, x
-
-        let windowSize = window.innerWidth
-        window.addEventListener('resize', () => {
-            windowSize = window.innerWidth
-            journalists.style.left = '0px'
-            windowSize > 1670 ? slider.style.cursor = 'auto' : null
-
-        })
-
-
-        slider.addEventListener('mousedown', e => {
-            windowSize < 1670 ? pressed = true : null
-            startX = e.offsetX - journalists.offsetLeft
-        })
-
-        slider.addEventListener('touchstart', e => {
-            windowSize < 1670 ? pressed = true : null
-            startX = e.targetTouches[0].pageX - journalists.offsetLeft
-        })
-
-
-
-
-
-        slider.addEventListener('mouseenter', () => {
-            if (windowSize < 1670) {
-                slider.style.cursor = 'grab'
-            }
-        })
-
-        slider.addEventListener('mouseup', () => {
-            if (windowSize < 1670) {
-                slider.style.cursor = 'grab'
-            }
-        })
-
-        window.addEventListener('mouseup', () => {
-            pressed = false
-        })
-
-        window.addEventListener('touchend', () => {
-            pressed = false
-        })
-
-
-
-
-        slider.addEventListener('mousemove', e => {
-            if (e.clientY > slider.getBoundingClientRect().top && e.clientY < journalistCont.getBoundingClientRect().top) {
-                slider.style.cursor = 'auto'
-            } else {
-                slider.style.cursor = 'grab'
-            }
-            if (!pressed) return
-            e.preventDefault()
-            x = e.offsetX
-            journalists.style.left = `${x - startX}px`
-            checkBoundary()
-        })
-
-        slider.addEventListener('touchmove', e => {
-            if (e.touches[0].clientY < journalistCont.getBoundingClientRect().top + 230) return
-            if (e.touches[0].clientY > journalistCont.getBoundingClientRect().bottom - 50) return
-            if (!pressed) return
-            e.preventDefault()
-            x = e.targetTouches[0].pageX
-            journalists.style.left = `${x - startX}px`
-            checkBoundary()
-        })
-
-
-
-
-
-
-        function checkBoundary() {
-            let outer = slider.getBoundingClientRect()
-            let inner = journalists.getBoundingClientRect()
-
-            if (parseInt(journalists.style.left) > 0) {
-                journalists.style.left = '0px'
-            } else if (inner.right < outer.right) {
-                journalists.style.left = `-${inner.width - outer.width}px`
-            }
-        }
-
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
