--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aris Inside</title>
+    <link rel="icon" href="images/fav.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -34,7 +35,10 @@
                 </div>
             </nav>
             <div class="mobileMenu burgerMenu">
-                <img src="images/mobile-menu.png" alt="Menu Button">
+                <!-- <img src="images/mobile-menu.png" alt="Menu Button"> -->
+                <div class="bar1"></div>
+                <div class="bar2 bar2hover"></div>
+                <div class="bar3"></div>
             </div>
             </div>
         </header>
@@ -140,7 +144,8 @@
                                     Τεύχος</strong>
                                 <div class="dash"></div>
                                 <span class="price"><span>3</span>,50 <span>€</span></span>
-                                <button>Αγορά</button>
+                                <a targert="_blank"
+                                    href="https://issuu.com/kvelitsikakis/docs/aris_inside_magazine_-_issue_no.1_-_february_2021"><button>Αγορά</button></a>
                             </div>
                             <div class="yearly">
                                 <strong>Ετήσια<br>
