--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 </div>
             </nav>
             <div class="mobileMenu burgerMenu">
-                <!-- <img src="images/mobile-menu.png" alt="Menu Button"> -->
                 <div class="bar1"></div>
                 <div class="bar2 bar2hover"></div>
                 <div class="bar3"></div>
@@ -77,7 +76,9 @@
                         </div>
                     </div>
                     <div class="desktopMenu burgerMenu">
-                        <img src="images/mobile-menu.png" alt="Menu Button">
+                        <div class="bar1"></div>
+                        <div class="bar2 bar2hover"></div>
+                        <div class="bar3"></div>
                     </div>
                 </nav>
             </header>
@@ -340,7 +341,7 @@
                 </div>
             </div>
             <div class="down">
-                <div>Όροι Χρήσης | Πολιτική Cookies</div>
+                <!-- <div>Όροι Χρήσης | Πολιτική Cookies</div> -->
                 <div>Aris Inside ©2021</div>
             </div>
         </footer>
