--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <img src="images/logo.png" alt="logo">
                     </div>
                     <div class="menu">
-                        <div class="arhikiMenu1 desktop-static-menu1">Αρχική</div>
+                        <div class="desktop-static-menu1">Αρχική</div>
                         <div class="desktop-static-menu2">Το Περιοδικό</div>
                         <div class="desktop-static-menu3">Συντελεστές</div>
                         <div class="desktop-static-menu4">Επικοινωνία</div>
@@ -112,9 +112,9 @@
                         <h2>
                             Το <span class="underlineCont">
                                 πρώτο
-                                ψηφιακό
+                                ηλεκτρονικό
                                 περιοδικό</span><br>
-                            για τον Άρη μας είναι γεγονός!
+                            για τον Άρη είναι γεγονός!
                         </h2>
                         <div>
                             Πρωτοποριακό, μοντέρνο και πάνω απ' όλα κιτρινόμαυρο! Το <span class="boldItalic">Aris
@@ -129,19 +129,20 @@
                                     εγγυρότητα κι εμπειρία
                                 </span>
                             </span> που συνοδεύει τόσο
-                            τη δημοσιογραφική όσο και τη δημιουργική ομάδα.
+                            τη δημοσιογραφική όσο και τη δημιουργική ομάδα. Από την Παρασκευή 26/02 και κάθε τελευταία
+                            Παρασκευή του μήνα στις οθόνες σας.
                         </div>
                     </div>
                     <div class="right">
                         <h6>
                             Η αγορά και η ανάγνωση του περιοδικού<br>
                             γίνεται μέσω της πλατφόρμας <strong>issuu.</strong><br>
-                            <strong>→ Αγορά μέσω του issue.com</strong><br>
+                            <strong>→ Αγορά μέσω του issuu.com</strong><br>
                             <strong>→ Ανάγνωση σε browser ή στο issuu mobile app.</strong><br>
                         </h6>
                         <div>
                             <div>
-                                <strong>Μεμονομένο<br>
+                                <strong>Μεμονωμένο<br>
                                     Τεύχος</strong>
                                 <div class="dash"></div>
                                 <span class="price"><span>3</span>,50 <span>€</span></span>
@@ -200,7 +201,7 @@
 
                                 Αυτό θα υπηρετήσω και στην νέα προσπάθεια που
 
-                                καταβάλει το περιοδικό ARISINSIDE με μια καινούργια
+                                καταβάλει το περιοδικό Aris Inside με μια καινούργια
 
                                 προσέγγιση, πάντα με σκοπό την έγκυρη ενημέρωση
 
@@ -226,7 +227,7 @@
 
                                 της "Καθημερινής" (σε συνεργασία με την γαλλική "L'
 
-                                Equipe"</p>
+                                Equipe").</p>
                         </div>
                         <div class="journalist">
                             <div class="image"><img src="images/journalist/tsarouhas.jpg" alt="Τσαρούχας"></div>
@@ -290,14 +291,23 @@
                         </div>
 
                     </div>
-                    <div class="mail">
+                    <div class="mail mail1">
                         <div>
                             <img src="images/file.png" alt="File">
                             <div>
                                 info@arisinside.gr
                             </div>
                         </div>
-
+                        <div class="copyMessage">Αντιγράφηκε</div>
+                    </div>
+                    <div class="mail mail2">
+                        <div>
+                            <img src="images/file.png" alt="File">
+                            <div>
+                                marketing@arisinside.gr
+                            </div>
+                        </div>
+                        <div class="copyMessage">Αντιγράφηκε</div>
                     </div>
                     <a href="https://m.me/arisinside" target="_blank" class="messanger">
                         <img src="images/messanger.png" alt="Messanger">
@@ -335,6 +345,12 @@
                             <a target="_blank" href="https://www.instagram.com/arisinside/"><img
                                     src="images/instagram.png" alt="instagram"></a><a target="_blank"
                                 href="https://www.instagram.com/arisinside/">@Arisinside</a>
+                        </span>
+
+                        <span class="youtube">
+                            <a target="_blank" href="https://www.youtube.com/channel/UC_wA-PkB2Esa3zMjTK9NKdg"><img
+                                    src="images/youtube.png" alt="instagram"></a><a target="_blank"
+                                href="https://www.youtube.com/channel/UC_wA-PkB2Esa3zMjTK9NKdg">@Aris Inside</a>
                         </span>
 
                     </div>
